# lending-club

./: .gitignore  pyproject.toml
src/: modelling.ipynb
src/lending_club/: __init__.py  eval.py  fitting.py  logger.py  processing.py
