[project]
name = "lending-club"
version = "0.1.0"
description = "Data Science exploration with Lending Club dataset."
authors = [
    {name = "Michal", email = "mcpiatkowski@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "imbalanced-learn>=0.12.3",
    "matplotlib>=3.9.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
